# JARVIS

./: .env.example  .gitignore  README.md  STARTUP.md  pyproject.toml
backend/src/jarvismk2/: __init__.py  __main__.py  cli.py  server.py
backend/src/jarvismk2/agents/: __init__.py  auto_learning.py  orchestrator.py  simple.py  swarm.py  webbridge.py
backend/src/jarvismk2/brain/: __init__.py  cervello.py  episodic.py  learning.py
backend/src/jarvismk2/channels/: __init__.py  telegram.py
backend/src/jarvismk2/connectors/: __init__.py  obsidian.py  webbridge.py
backend/src/jarvismk2/core/: __init__.py  config.py  events.py  registry.py  scheduler.py  types.py
backend/src/jarvismk2/engine/: __init__.py  base.py  groq_engine.py  kimi_engine.py  ollama_engine.py  openai_engine.py  router.py  token_budget.py
backend/src/jarvismk2/skills/: __init__.py  manager.py
backend/src/jarvismk2/voice/: __init__.py  ascolto.py  voce.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: HUDCircle.tsx  HUDWidgets.tsx  Layout.tsx
frontend/src/components/Brain/: Brain3DView.tsx  BrainGraphView.tsx
frontend/src/components/Chat/: ChatArea.tsx  InputArea.tsx  MessageBubble.tsx  MicButton.tsx  StreamingDots.tsx
frontend/src/components/widgets/: BrainWidget.tsx  ChatWidget.tsx  QueueWidget.tsx  SkillsWidget.tsx
frontend/src/hooks/: useVoiceEngine.ts  useWidgetCommands.ts
frontend/src/lib/: api.ts  store.ts  utils.ts
frontend/src/pages/: AgentsPage.tsx  BrainPage.tsx  ChatPage.tsx  OrbPage.tsx  SettingsPage.tsx  SkillsPage.tsx
