[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvismk2"
version = "0.1.0"
description = "JARVIS MK2 — Personal AI Assistant, fusion of OpenJarvis (modular, local-first) and JARVIS (Italian persona, cognitive brain, voice, swarm)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Giacomo Tronconi" }]
keywords = ["ai", "assistant", "ollama", "voice", "agents", "local-first", "italian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies — minimal, always installed
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "httpx>=0.27",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "tomlkit>=0.12",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# Local inference (Ollama is HTTP, so no Python dep needed for it)
inference-cloud = [
    "openai>=1.40",
    "anthropic>=0.34",
    "google-genai>=1.0",
]
inference-groq = ["groq>=0.11"]

# Voice — Italian STT/TTS
voice = [
    "SpeechRecognition>=3.10",
    "groq>=0.11",
    "pyaudio>=0.2.13; sys_platform != 'darwin'",
    "pyobjc-framework-AVFoundation>=10.0; sys_platform == 'darwin'",
]

# Swarm — CrewAI multi-agent
swarm = [
    "crewai>=0.55",
    "langchain-community>=0.2",
    "langchain-ollama>=0.2",
]

# Memory — semantic embeddings
memory-embeddings = [
    "google-genai>=1.0",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]

# Channels
channel-telegram = ["python-telegram-bot>=21.0"]
channel-discord = ["discord.py>=2.3"]

# Connectors
connector-obsidian = []  # no extra deps — uses filesystem
connector-gmail = [
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
]

# Computer use (macOS)
computer-use = [
    "pyautogui>=0.9.54",
    "pillow>=10.0",
]

# Dev tooling
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.0",
]

# Convenience: everything except heavy GPU/cloud SDKs
all = [
    "jarvismk2[voice,swarm,memory-embeddings,channel-telegram,connector-obsidian,computer-use,inference-groq]",
]

[project.scripts]
jarvis = "jarvismk2.cli:main"
jarvismk2 = "jarvismk2.cli:main"

[project.urls]
Homepage = "https://github.com/open-jarvis/OpenJarvis"
"Inspired by (OpenJarvis)" = "https://github.com/open-jarvis/OpenJarvis"
"Inspired by (JARVIS)" = "https://github.com/mdmehedihasan-ac/JARVIS"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/jarvismk2"]

[tool.hatch.build.targets.sdist]
include = [
    "backend/src/jarvismk2",
    "README.md",
    "pyproject.toml",
    ".env.example",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["backend/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # let formatter handle long lines

[tool.pytest.ini_options]
pythonpath = ["backend/src"]
testpaths = ["backend/tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
